# attograd

./: .gitignore  README.md  pyproject.toml
src/attograd/: __init__.py  _neuron.py  _node.py  _scalar.py  _tensor.py
tests/: test_basic_identity_matrix.py  test_karpathy_micrograd.py  test_karthy_micrograd.py
