[project]
name = "attograd"
version = "0.1.0"
description = "A toy autograd framework"
readme = "README.md"
authors = [
    { name = "Mike Wilkerson", email = "wilkystyle@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "pytest>=9.0.2",
]

[tool.coverage.report]
show_missing = true  # Indicate which lines of code are missing coverage

[tool.coverage.run]
omit = ["test_*"]
